--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </div>
         
         <div class="resumebtn">
-            <a href="./assets/BharathResume_2023.pdf" download target="_blank" class="btn"><span>Download Resume</span>
+            <a href="./assets/Bharath_2023.pdf" download target="_blank" class="btn"><span>Download Resume</span>
                 <i class="fas fa-chevron-right"></i>
             </a>
         </div>
