--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <h3>I'm Bharath M </h3>
         <span class="tag">Full Stack Developer</span>
         
-        <p> Determined and result-oriented Back-end Developer with 2+ years of experience in coding and optimizing web pages and developing scalable server-side applications. Highly proficient in multiple frameworks. Seeking to continue improving my coding skills as a full-stack developer. </p>
+        <p> Driven and results-oriented Software Engineer with 2.5+ years of experience in crafting efficient and scalable web applications. Expertise in multiple frameworks and a passion for continuous learning, seeking to expand my skills as a full-stack developer. </p>
         
         <div class="box-container">
             <!-- <div class="box">
