--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
             <ul>
             <li><a class="active" href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#education">Education</a></li>
+<!--             <li><a href="#skills">Skills</a></li> -->
             <li><a href="#experience">Experience</a></li>
+            <li><a href="#education">Education</a></li>
             <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
@@ -103,7 +103,7 @@
 <!-- about section ends -->
 
 <!-- skills section starts -->
-<section class="skills" id="skills">
+<!-- <section class="skills" id="skills">
 
     <h2 class="heading"><i class="fas fa-laptop-code"></i> Skills & <span>Abilities</span></h2>
 
@@ -117,57 +117,13 @@
               </div>
             </div> -->
 
-      </div>
+<!--       </div>
 </div>
-</section>
+</section> -->
 <!-- skills section ends -->
 
 
-<!-- education section starts -->
-<section class="education" id="education">
 
-  <h1 class="heading"><i class="fas fa-graduation-cap"></i> My <span>Education</span></h1>
-
-    <p class="qoute">Education is not the learning of facts, but the training of the mind to think.</p>
-
-    <div class="box-container">
-
-    <div class="box">
-        <div class="image">
-        <img draggable="false" src="https://images.shiksha.com/mediadata/images/1546513267phpgPkidQ.jpeg" alt="">
-        </div>
-        <div class="content">
-        <h3>Master of Computer Application</h3>
-        <p>The Oxford College of Engineering</p>
-        <h4>2019-2021 | Completed</h4>
-        </div>
-    </div>
-
-    <div class="box">
-      <div class="image">
-      <img draggable="false" src="https://lh3.googleusercontent.com/p/AF1QipPsD63Vkjph0Gv7i6Om31B005JQEw-9fPRMboWm=s1360-w1360-h1020" alt="">
-      </div>
-      <div class="content">
-      <h3>Bachelor of Computer Applications</h3>
-      <p>Vishwa Chethana Degree College</p>
-      <h4>2016-2019 | Completed</h4>
-      </div>
-    </div>
-
-     <div class="box">
-      <div class="image">
-      <img draggable="false" src="https://images.collegedunia.com/public/college_data/images/appImage/15120_SAIRAM_NEW.jpg" alt="">
-      </div>
-      <div class="content">
-      <h3>EBAC's</h3>
-      <p>Sri Sairam College of Engineering</p>
-      <h4>2014-2016 | Completed</h4>
-      </div>
-    </div>
-
-</div>
-</section>
-<!-- education section ends -->
 
 
 <!-- work project section starts -->
@@ -201,7 +157,7 @@
 </a>
 </div> -->
 
-</section> -->
+</section>
 <!-- work project section ends -->
 
 <!-- experience section starts -->
@@ -274,6 +230,52 @@
 
 </section>
 <!-- experience section ends -->
+
+    <!-- education section starts -->
+<section class="education" id="education">
+
+  <h1 class="heading"><i class="fas fa-graduation-cap"></i> My <span>Education</span></h1>
+
+    <p class="qoute">Education is not the learning of facts, but the training of the mind to think.</p>
+
+    <div class="box-container">
+
+    <div class="box">
+        <div class="image">
+        <img draggable="false" src="https://images.shiksha.com/mediadata/images/1546513267phpgPkidQ.jpeg" alt="">
+        </div>
+        <div class="content">
+        <h3>Master of Computer Application</h3>
+        <p>The Oxford College of Engineering</p>
+        <h4>2019-2021 | Completed</h4>
+        </div>
+    </div>
+
+    <div class="box">
+      <div class="image">
+      <img draggable="false" src="https://lh3.googleusercontent.com/p/AF1QipPsD63Vkjph0Gv7i6Om31B005JQEw-9fPRMboWm=s1360-w1360-h1020" alt="">
+      </div>
+      <div class="content">
+      <h3>Bachelor of Computer Applications</h3>
+      <p>Vishwa Chethana Degree College</p>
+      <h4>2016-2019 | Completed</h4>
+      </div>
+    </div>
+
+     <div class="box">
+      <div class="image">
+      <img draggable="false" src="https://images.collegedunia.com/public/college_data/images/appImage/15120_SAIRAM_NEW.jpg" alt="">
+      </div>
+      <div class="content">
+      <h3>EBAC's</h3>
+      <p>Sri Sairam College of Engineering</p>
+      <h4>2014-2016 | Completed</h4>
+      </div>
+    </div>
+
+</div>
+</section>
+<!-- education section ends -->
 
 <!-- contact section starts -->
 <section class="contact" id="contact">
